# attr-methods

./: .gitignore  README.md  requirements.txt  setup.cfg
attrmethods/: __init__.py  deep_lift.py  epsilon_lrp.py  gradient_input_product.py  integrated_gradient.py
attrmethods/deeplift/: autograd.py  dnn.py  linear.py  sequential.py
attrmethods/lrp/: autograd.py  dnn.py  linear.py  sequential.py
tests/: dnn.py  mnist.ipynb
tests/models/: minst_dnn_100_epochs.pt  minst_dnn_10_epochs_relu_bias.pt  minst_dnn_10_epochs_tanh_bias.pt  minst_dnn_10_epochs_tanh_no_bias.pt  minst_dnn_20_epochs_softplus_bias.pt
