[metadata]
name = attrmethods
version = 1.0
author = Seth Dale
author_email = seth.d.dale@gmail.com
description = Attribution methods for DNNs as described in https://arxiv.org/pdf/1711.06104.pdf implemented in PyTorch
long_description = file: README.md
long_description_content_type = text/markdown
# url =
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE

[options]
packages = find:

[options.packages.find]
include = attrmethods